--- a/src/layouts/ContactLayout.astro
+++ b/src/layouts/ContactLayout.astro
@@ -14,6 +14,13 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WD5BB9J40J"></script>
+    <script is:inline>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-WD5BB9J40J');
+    </script>
   </head>
   <body>
     <main class="contact-only-layout">
